[package]
name = "amethyst-drone-config"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git", branch = "master", features = ["test-support", "vulkan"] }
amethyst_test = { git = "https://github.com/amethyst/amethyst.git", branch = "master" }
